# OneFit

./: .gitignore  README.md  package.json
backend/: .env.example  README.md  backend.py  config.py  pyproject.toml
backend/app/: __init__.py  communRoutes.py  coreRoutes.py  models.py  routes.py  schemas.py  smart_client.py
backend/app/Routes/: __init__.py  auth.py  externe.py  routine.py  seance.py  seanceReel.py  sport.py  user.py  user_option.py
backend/app/data/: routines_prefaites.json
backend/app/utils/: logger.py
backend/database/: app.db
backend/tests/: conftest.py  test_routes.py
frontend/: .gitignore  README.md  angular.json  package-lock.json  package.json
frontend/OneFit/: README.md  angular.json  package-lock.json  package.json
frontend/OneFit/src/: index.html
frontend/OneFit/src/app/: app.spec.ts  app.ts
frontend/src/: index.html  main.ts  message.ts  poidUpdate.ts  polyfills.ts  server.ts  styles.css
frontend/src/app/: app.config.ts  app.html  app.routes.ts  app.ts  auth.interceptor.ts  envoyer-id.spec.ts  envoyer-id.ts  envoyerElt.spec.ts  envoyerElt.ts  erreur.spec.ts  erreur.ts  notification.ts  select-composant.spec.ts  select-composant.ts  theme.ts  tooltipmove.spec.ts  tooltipmove.ts
frontend/src/app/accueil/: accueil.css  accueil.html  accueil.ts
frontend/src/app/affiche-sceance/: affiche-sceance.html  affiche-sceance.spec.ts  affiche-sceance.ts
frontend/src/app/aide-exo/: aide-exo.css  (+3 more)
frontend/src/styles/: buttons.css  canvas.css  carousel.css  compliance.css  config.css  form.css  input.css  routines.css  tooltip.css
(+115 files in other folders)
